--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,26 @@
 .text-right{ text-align: right }
 .pd-1{padding: 1rem;}
 .pb-1{padding-bottom: 1.5rem;}
+.mb-1{margin-bottom: 1.5rem;}
 .head-link{text-decoration: none; color: #333}
 .black{
   color: #666;
+}
+.link,
+.link a,
+.link a:visited {
+  color: #37acf6;
+  cursor: pointer;
+  text-decoration: none;
+}
+.cell-text-ellipsis {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+@media (max-width: 960px) {
+  .cell-text-ellipsis {
+    max-width: 100px;
+  }
 }
